--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -69,7 +69,9 @@
 - Glide：它怎么实现图片的加载进度条，Glide的缓存是怎么设计的？为什么要用弱引用。
 - MMKV库：mmkv了解吗？它是如何存储数据的，mmap为什么比io高效，如何避免线程安全，为何进程杀死后仍然能保存好数据，是怎么做到的？如何保证多进程写入安全？
 - 简述okhttp源码，请求怎么管理，它的线程池怎么实现？网络请求缓存处理是怎样的逻辑思路？
-
+- LeakCanary：LeakCanary 的核心工作流程，它的设计思想是什么？初始化做了那些工作？如何设计组件的监听(怎么监听ViewModel，Service销毁事件)？
+- LeakCanary：如何判断内存的泄漏？内存泄漏的判定条件是什么 ？检测内存泄漏的机制原理是什么？发现泄漏对象后就会触发分析吗？
+- LeakCanary：检测出内存泄漏后，它又是如何生成泄漏信息的？ 内存泄漏的输出轨迹是怎么得到的？为什么不能用到线上环境？
 
 
 
