--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -161,9 +161,8 @@
 
 ### 04.使用高效日志库
 #### 4.1 高效日志方案
-- 移动日志系统使用了Linux系统中提供的mmap作为日志文件的载体，目前业内流行的XLOG日志组件、MMKV、美团Logan均采用了此方案，其最大的优势就是高效I/O、低损耗、跨进程 等优势。
-  
-
+- 移动日志系统使用了Linux系统中提供的mmap作为日志文件的载体
+    - 目前业内流行的XLOG日志组件、MMKV、美团Logan均采用了此方案，其最大的优势就是高效I/O、低损耗、跨进程 等优势。
 
 
 #### 4.3 移动端使用mmap
@@ -172,6 +171,7 @@
 
 
 #### 4.4 XLog介绍
+
 
 
 #### 4.5 Logan介绍
