--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.整体概述
     - 1.1 项目背景说明
-    - 1.2 遇到问题记录
+    - 1.2 技术方案选型
     - 1.3 基础概念介绍
     - 1.4 开发设计目标
 - 02.通信基础概念
@@ -39,6 +39,7 @@
     - 6.3 灰度设计
     - 6.4 降级设计
     - 6.5 异常设计
+    - 6.6 安全性设计
 - 07.TCP/IP精髓设计
     - 7.1 协议版本如何升级
     - 7.2 如何发送不定长数据的数据包
@@ -66,7 +67,10 @@
 #### 1.1 项目背景说明
 
 
-#### 1.2 遇到问题记录
+#### 1.2 技术方案选型
+- 类似微信消息接收等场景
+    - 方案1：需要客户端主动去轮询，则会频繁发起请求，对于服务器会产生很大的负载压力，浪费带宽流量。
+    - 方案2：通过长连接，服务端可以主动把消息下发给客户端，做到最高实时性，且节省流量。
 
 
 #### 1.3 基础概念介绍
@@ -282,6 +286,23 @@
 
 
 #### 4.4 断开重试的设计
+- 长连接何时会断开
+    - 正常而言，长连接是不会断开的。大家可以自己试一试，两个socket建立连接，只要网络不变、一切正常，那么这两个socket可以一直互相传送数据，不会断开。
+    - 但是，在移动网络下，网络状态复杂多变，比如线路异常，网络线路被切断、服务器宕机等，都会导致长连接中断。
+- 需要关注下面几个长连接断开原因：
+    - 1.长连接所在进程被杀。这个很容易理解，如果App切换到后台，那么系统随时可能将我们的App杀掉，这时长连接自然也就随之断开。
+    - 2.用户切换网络。比如手机网络断开，或者发生Wi-Fi和蜂窝数据切换，这时会导致手机IP地址变更。TCP连接是基于IP + Port的，一旦IP变更，TCP连接自然也就失效了，或者说长连接也就相当于断开了。
+    - 3.系统休眠等导致NAT超时。运营商会给每台设备分配一个公网IP。随着连接网络的设备不断增多，网关负载也会不断加大，这时运营商会对一些不太活跃设备进行公网IP回收，如果下次这个设备需要连网，那就重新分配一个IP即可。
+    - 4.DHCP 租期过期。如果没有及时续约，同样会导致IP地址失效。
+    - 综合而言：长连接在正常情况下是不会断开的，但是，一旦手机的IP地址失效，这时就不得不重新建立连接了。
+- 断开重连的方案设计
+    - 创建Receiver，监控网络状态，如果网络发生切换则立即重连；
+    - 监控服务端心跳包回包，如果连续5次没有收到回包，则认为长连接已经失效；
+    - 设置心跳包超时限制，如果超过时间还没有收到心跳回包，则重连，这种方式比较耗电；
+    - 等socket IO异常抛出，不过耗时太长，需要15s左右才能发现。
+
+
+
 
 
 #### 4.5 数据的封包和解析
@@ -362,12 +383,29 @@
 
 ### 06.稳定性实践说明
 #### 6.1 性能设计
-- 关于长链接心跳包优化
+- 关于长链接心跳包优化【固定心跳】
     - 如果想节省资源，在有客户发送数据的时候可以省略 heart beat。目前的做法是发送数据的时候，更新发送ping【移除之前的ping消息，然后发送一条最新的延迟ping消息】
+- 优化使用智能心跳策略【动态心跳】
+    - 在尽量不影响用户收消息及时性的前提下，根据网络类型自适应的找出保活信令TCP连接的尽可能大的心跳间隔，从而达到减少App因心跳引起的空中信道资源消耗，减少心跳Server的负载，以及减少部分因心跳引起的耗电。
+    - 第一种：自适应心跳。第二种：前后台策略。
+- 自适应心跳的设计
+    - 首先，如果心跳间隔越久，产生的负载和消耗也会越小。因此采用自适应心跳：当找到一个有效心跳间隔后，我们主动去加大这个间隔，然后测试是否能成功，如果不能，则使用比上一次成功间隔稍短的时间作为间隔；否则继续加大间隔，直到找到可用的有效间隔。
+    - 如何判断一个心跳间隔有效呢？采用方案是使用固定短心跳直到满足三次连续短心跳成功，则认为这个间隔有效。
+    - 探测过程大致为：60秒短心跳，连续发3次后开始探测，三次成功则改为90，依次类推120，150，180，210，240，270。
+- 前后台策略的设计
+    - 考虑到App在前后台对于长连接的需求是不同的。
+    - 1.当App在前台活跃态时，采用了固定心跳机制；
+    - 2.当前台熄屏态或者后台活跃态（进入后台10分钟内）时，先用几次最小心跳维持长连接，然后进入自适应心跳机制；
+    - 3.当后台稳定态（超过10分钟），则采用自适应心跳计算出来的最大心跳作为固定值。
 
 
 
 #### 6.2 稳定性设计
+- 如何建立稳定长连接
+    - 上面提到了多种长连接断开的原因，那我们应该如何进行优化，尽可能保证长连接不断开，或者及时断开了，也要尽快重连呢？
+    - 第一种：长连接独立进程。将长连接逻辑单独提取到了一个独立的进程里。这个进程只做网络交互，消耗的内存等资源自然较少，从而减少了被系统回收的概率。
+    - 第二种：心跳机制。对于心跳包很多人误以为只是用来定期告诉服务端我们的状态，实际并非如此。需要通过心跳机制来保证App的活跃度，防止发生 NAT 超时导致断开连接。
+    - 第三种：断开重连。在线上运行时，长连接很有可能会由于网络切换之类的原因断开。这时，我们需要尽快发现长连接断开，并立即重连。
 
 
 
@@ -376,6 +414,11 @@
 
 
 #### 6.4 降级设计
+- 长连接通道建设及容灾
+    - 客户端与代理长连服务器建立长连接，代理服务器可全国多地部署，在建立长连时可以选择最近的服务器IP就近接入；
+    - 长连接建立好后，客户端对要发送的二进制数据进行加密并传输；
+    - 代理服务器收到后，可以通过内部专线或普通Http请求来访问业务服务器；
+    - 如果长连接出现问题导致不可用，为保障客户端运行，需要立即降级成普通Http短连或者UDP通道。
 
 
 
@@ -383,6 +426,13 @@
 - 如何处理读写异常逻辑？
     - 对读出错时候的处理，可能也存在一些争议。读出错后，我们只是关闭了 socket。socket 需要等到下一次写动作发生时，才会重新连接。
     - 实际应用中，如果这是一个问题，在读出错后可以直接开始重连。这种情况下，还需要一些额外的同步，避免重复创建 socket。
+
+
+
+#### 6.6 安全性设计
+- 长连接数据协议及加密
+    - 长连接传递的是二进制数据，前后端可以自行协商每个字节要存放的内容即可。当然，也可以考虑采用一些通用协议：比如SMTP、ProtoBuf等序列化方案。
+    - 在数据加密方面，可以结合非对称加密算法RSA和对称加密算法AES来对数据进行加密传输。
 
 
 
