--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -63,17 +63,19 @@
 ### 03.作业帮项目问题汇总
 - 音视频通话：
 - 音视频通话：
-- Socket概念：Socket是如何通信的？跟Http有何区别？数据传递性能如何？是否具有安全性？
+- Socket概念：Socket是如何通信的？跟Http有何区别？数据传递性能如何？是否具有安全性？如何保证数据时效性？
 - Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
 - Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
 - Socket长链接：如何设置socket保持长链接？如何保持轮训心跳包稳定性并且不会阻塞主线程？如何理解心跳包？
-- Socket读写：如何理解Socket读写数据？如何处理读写异常逻辑？异常之后如何设计重新连接？
+- Socket读写：如何理解Socket读写数据？如何处理读写异常逻辑？异常之后如何设计重新连接？那些情况会断开连接？
 - Socket数据：TcpPacket是如何设计的？消息的长度是不确定的，并且每条消息都有它的边界。我们如何来处理这个边界？
 - Socket数据：如何保证数据有序性？一个任务队列，执行任务，如何保证先取出的任务，执行结果需要先放入结果队列？
-- App抓包：
-- TTS：
-- 日志写入：
-- 日志回捞：
+- 缓存方案：Sp有何弊端？读取数据是否高效？如何设计线程安全？是否是增量刷新数据？
+- 缓存脏数据：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
+- 缓存设计：由于磁盘 IO 操作是耗时操作，因此框架有必要将支持多次磁盘 IO 操作聚合为一次磁盘写回事务，减少访问磁盘次数是如何设计？
+- App抓包：设计数据加密手段，sign签名，环境检测，CA证书校验，禁用代理，还有各种防抓包策略如何操作？
+- 日志写入：如何设计日志写入框架？
+- 日志回捞：日志上传的业务逻辑是什么样的？有什么收益？日志上传总体设计方案是什么样的？
 
 
 
@@ -103,6 +105,7 @@
 - 弱网模拟工具：
 - 通用存储方案库：
 - 日志打印：
+- ASM方法耗时分析：
 
 
 
