--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -77,15 +77,18 @@
 - 生产者消费者：说说生产者-消费者场景，如何保证生产者不会在缓冲区满时加入数据，消费者也不会在缓冲区空时消耗数据？
 - ThreadLocal：ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
 - 线程异常：线程中异常为何不能抛出到外部线程捕获？如何处理线程异常？
+- 线程等待：wait()和sleep()的区别？各自有哪些使用场景？怎么唤醒一个阻塞的线程？Thread.sleep(0)的作用是啥？
+
 
 
 ### 07.并发知识问题
 - 多线程：多线程为何会有bug？为什么会产生这种问题，又是如何解决的？
 - volatile：volatile这个关键字是怎么理解的？在并发环境中如何确保程序的可见性、顺序性和一致性？
 - Synchronized：谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？有哪些使用场景？说一下锁如何升级和降级。
-- 锁比较：Lock锁比synchronized块的优势是什么？
+- 锁比较：Lock锁比synchronized块的优势是什么？各自用途是什么？有哪些不同点？
+- 多线程规则：如何理解同步，异步，阻塞，非阻塞的概念。如何实现异步线程串列执行？
 - 死锁：活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
-- CAS乐观锁：什么是乐观锁？如何实现乐观锁？如何避免ABA问题？CAS乐观锁是如何实现的？
+- CAS乐观锁：什么是乐观锁？如何实现乐观锁？如何避免ABA问题？CAS乐观锁是如何实现的？CAS的问题有哪些？
 - 读写锁：设计一个多线程，可以同时读，读的时候不能写，写的时候不能读(读写锁)。两个进程同时要求写或者读，能不能实现？
 - 线程优先级：Java中用到的线程调度算法是什么？你对线程优先级的理解是什么？什么是线程调度器 (Thread Scheduler) 和时间分片 (Time Slicing)？
 - 线程安全：谈谈你对多线程同步机制的理解？如何保证多线程读写文件的安全，有哪些方式可以做到？
