--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -42,7 +42,7 @@
 - 在滴滴产出
     - 快速适应flutter混合开发，承担地图&导航&定位&其他等模块大改版，不断拉齐Android和iOS两端差异化，承接基础业务开发。
     - 开发磁盘缓存查看工具，极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
-    - 开发App状态监听库并记录到日志库，提效；优化tts库，增加优先级播放，改善用户体验；开发隐私合规库工具和制定合规方案和测试方案，并统一落地。
+    - 组件化项目之间业务组件通信，使用apt生成代码简化注册流程，提高组件通信交互能力。开发隐私合规库工具和制定合规方案和测试方案，并统一落地。
 
 
 #### 2.3 2018年7月到2020年3月
@@ -55,9 +55,8 @@
     - 1.项目需求写完，自己自测，和同事互测，几乎养成自测习惯，写代码有规范意识和强迫症。多次在公司内部技术分享。
 - 在大搜车产出
     - 负责项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码开发。将多个app不断完善抽取分离组件化module，为后期app快速高效复用打下基础。
-    - 通用视频播放器，用于4条业务线，开源star2k，解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
-    - 网络拦截小助手，内部开源，网络流程分析，记录每个网络请求->响应数据，方便查看很全面的请求头信息，响应头信息，以及body实体，以及网络连接，dns解析，TLS连接，请求响应等时间差……
-
+    - 通用视频播放器，用于4条业务线，开源star2k，解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展。
+    - 通用网络拦截助手工具开发，方便项目查看页面网络请求日志，请求耗时，流量统计，弱网模拟。
 
 
 #### 2.4 2015年9月到2018年7月
@@ -85,7 +84,7 @@
 
 ### 4.个人评价
 - 极度自律，喜欢编程，能够克服开发过程中绝大部分的技术问题，对于GitHub开源项目持续更新和维护。
-- 虽然工作上不是很聪明，但是做事靠谱和认真，一步一个脚印，有始有终，能够持续不断完善自我，不算会表达。
+- 工作上做事靠谱和认真，一步一个脚印，有始有终，能够持续不断完善自我。
 - 擅长进行自我反省和复盘，做事闭环，坚持学习，不甩锅，能承担压力并且有产出，提高业务或者技术收益。
 
 
