--- a/Read/ReadMeWiki/00.方案实践/33.Gradle构建优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/33.Gradle构建优化实践.md
@@ -13,6 +13,8 @@
 
 
 #### 参考博客
+- Android Gradle学习(八) 统计Task执行时长
+    - https://blog.csdn.net/chennai1101/article/details/103280523/
 - 优酷 Android 构建速度优化实践
     - https://mp.weixin.qq.com/s?__biz=Mzg4MjE5OTI4Mw==&mid=2247494815&idx=1&sn=9edb7cb3346926e0a55b03bb6008b61a&chksm=cf58f303f82f7a158fc660b91abb2ae8b16f12115edcae0da05f7f6df2a7fbadfb75574653e0&scene=178&cur_album_id=2495132597375975425#rd
 
