--- a/Read/ReadMeWiki/01.大型方案/09.IPC跨进程通信实践.md
+++ b/Read/ReadMeWiki/01.大型方案/09.IPC跨进程通信实践.md
@@ -48,7 +48,24 @@
 #### 1.4 设计目标
 
 
+
+
 ### 02.IPC通信方式
+- 使用Intent
+    - Activity，Service，Receiver 都支持在 Intent 中传递 Bundle 数据，而 Bundle 实现了 Parcelable 接口，可以在不同的进程间进行传输。
+- 使用文件共享
+    - 可以在一个进程中序列化一个对象到文件系统中，在另一个进程中反序列化恢复这个对象（**注意**：并不是同一个对象，只是内容相同。）
+- 使用Messenger
+    - Messenger 是一种轻量级的 IPC 方案，它的底层实现是 AIDL ，可以在不同进程中传递 Message 对象，它一次只处理一个请求，在服务端不需要考虑线程同步的问题，服务端不存在并发执行的情形。
+- 使用AIDL
+    - 服务端，创建Service用于监听客户端的连接请求，然后创建一个AIDL接口文件，里面是将要实现的方法，注意这个方法是暴露给客户端的的，**在Service中实现这个AIDL接口即可**。
+    - 客户端，先绑定服务端Service，绑定成功后，将服务端返回的Binder对象转换成AIDL接口所属的类型，最后调用AIDL的方法就可以了。
+- 使用ContentProvider
+    - 许多如通讯录、公共相册、日程表，需要跨进程访问。使用方法：继承 ContentProvider 类实现抽象方法，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
+
+
+
+
 #### 2.1 使用Intent
 - 使用介绍
     - Activity，Service，Receiver 都支持在 Intent 中传递 Bundle 数据，而 Bundle 实现了 Parcelable 接口，可以在不同的进程间进行传输。
