--- a/Read/ReadMeWiki/01.大型方案/20.通用日志上传实践.md
+++ b/Read/ReadMeWiki/01.大型方案/20.通用日志上传实践.md
@@ -324,7 +324,8 @@
     - https://www.51cto.com/article/682747.html
 - okhttp带进度上传
     - https://www.jianshu.com/p/bf734b3fb304
-
+- APP系统报错日志反馈机制设计
+    - https://blog.csdn.net/RuihanChen/article/details/51133742
 
 
 
