--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -1,59 +1,70 @@
 #### 目录介绍
 - 01.整体概述
     - 1.1 项目背景说明
-    - 1.2 遇到问题
+    - 1.2 考虑的事情
     - 1.3 基础概念介绍
     - 1.4 设计目标
     - 1.5 产生收益分析
-- 02.日志存储设计思路
-    - 2.1 使用跨进程通信
-    - 2.2 选择Service通信
-    - 2.3 日志文件路径设置
-    - 2.4 组装log日志设计
-    - 2.5 日志文件创建机制
-    - 2.6 日志缓存的策略
-    - 2.8 日志存储GZip压缩
-    - 2.9 多进程存储问题
-- 03.关键技术点说明
-    - 3.1 aidl通信步骤
-    - 3.2 跨进程启动服务
-    - 3.3 跨进程传输日志
-    - 3.4 日志写入操作
-    - 3.5 日志如何追加写入
-    - 3.6 日志切分存储
-    - 3.7 日志自动清除操作
-    - 3.9 遇到的一些问题
-- 04.使用高效日志库
-    - 4.1 高效日志方案
-    - 4.2 mmap理解介绍
-    - 4.3 移动端使用mmap
-    - 4.4 XLog介绍
-    - 4.5 Logan介绍
-    - 4.6 MMKV介绍
-- 05.方案基础设计
-    - 5.1 整体架构图
-    - 5.2 UML设计图
-    - 5.3 关键流程图
-    - 5.4 接口设计图
-    - 5.5 模块间依赖关系
-- 06.其他设计说明
-    - 6.1 性能设计
-    - 6.2 稳定性设计
-    - 6.3 灰度设计
-    - 6.4 降级设计
-    - 6.5 异常设计
-- 07.其他说明介绍
-    - 7.1 参考链接
+- 02.日志存储设计
+    - 2.1 日志存储总体设计
+    - 2.2 存储日志信息设计
+    - 2.3 日志保存策略设计
+    - 2.4 独立进程写数据
+    - 2.5 存储数据队列设计
+    - 2.6 如何写数据的设计
+- 03.方案基础设计
+    - 3.1 整体架构图
+    - 3.2 UML设计图
+    - 3.3 关键流程图
+    - 3.4 接口设计图
+    - 3.5 模块间依赖关系
+- 04.日志存储设实践
+    - 4.1 使用跨进程通信
+    - 4.2 选择Service通信
+    - 4.3 日志文件路径设置
+    - 4.4 组装log日志设计
+    - 4.5 日志文件创建机制
+    - 4.6 日志缓存的策略
+    - 4.8 日志存储GZip压缩
+    - 4.9 多进程存储问题
+- 05.关键技术点说明
+    - 5.1 aidl通信步骤
+    - 5.2 跨进程启动服务
+    - 5.3 跨进程传输日志
+    - 5.4 日志写入操作
+    - 5.5 日志如何追加写入
+    - 5.6 日志切分存储
+    - 5.7 日志自动清除操作
+    - 5.9 遇到的一些问题
+- 06.使用高效日志库
+    - 6.1 高效日志方案
+    - 6.2 mmap理解介绍
+    - 6.3 移动端使用mmap
+    - 6.4 XLog介绍
+    - 6.5 Logan介绍
+    - 6.6 MMKV介绍
+- 07.其他设计说明
+    - 7.1 性能设计
+    - 7.2 稳定性设计
+    - 7.3 灰度设计
+    - 7.4 降级设计
+    - 7.5 异常设计
 
 
 ### 01.整体概述
 #### 1.1 项目背景说明
 
 
-#### 1.2 遇到问题
+#### 1.2 考虑的事情
+- 日志系统设计需要考虑的问题：
+    - 1.需要保证日志系统收集到的数据的有效性和完整性，在app崩溃时日志不丢失。
+    - 2.保证收集日志的过程不影响app的性能，不能占用过高cpu资源，或者频繁IO造成卡顿现象。
 
 
 #### 1.3 基础概念介绍
+- 常见术语概念解析
+    - appender：主要控制日志输出到哪里，比如：文件、数据库、控制台打印等
+    - logger: 用来设置某一个包或者具体某一个类的日志打印级别、以及指定appender
 
 
 #### 1.4 设计目标
@@ -62,19 +73,53 @@
 #### 1.5 产生收益分析
 
 
+### 02.日志存储设计
+#### 2.1 日志存储总体设计
+
+
+
+#### 2.2 存储日志信息设计
+- 比如，打印日志如下所示：
+    - LogUtils.i("Log test info : click text view test")
+- 日志组装后输出到控制台
+    - yc_log:: [(LogTestActivity.kt:110)#OnClick] Log test info : click text view test
+    - 携带方法和的类的源文件行号，支持点击跳转到源文件。
+- 那么如何组装数据
+    - 获取当前堆栈信息，然后获取指定索引处的className和methodName。也就是：(LogTestActivity.kt:110)#OnClick
+    - 从中获取方法执行的线程相关的信息，以及执行的方法名称等。这些信息能帮助我们更好的查找问题之所在。
+
+
+
+#### 2.3 日志保存策略设计
+- 日志保存策略设计大概如下
+    - 由于保存日志的过程是个耗时过程，我们需要开启线程去保存。但是日志产生的频率可能很高，又不能采用一般的线程去处理，太多的线程也会损耗性能。所以应该考虑队列的形式保存日志，然后一条一条的去保存。
+
+
+#### 2.4 独立进程写数据
+- 使用独立的进程去写数据
+    - 第一步：在初始化的时候，bind绑定一个Service，主要是建立进程通信连接。然后获取aidl接口对象。
+
+
+#### 2.5 存储数据队列设计
+- 采集一次日志就保存到file文件中吗
+    - 这个采集过程，如果是每产生一次日志数据，就写一次文件，势必造成系统IO调用的频繁操作，可能会造成app运行卡顿现象。因此采用队列保存日志，当达到某数值则开始写入到文件，简单来说是追加写入。
+- 队列缓存大小，单位(条)，也可以动态修改容积。
+    - 比如进入日志高频触发区，则将缓存容积扩大到100条，进入低频触发区就缩小到10条。容积缩小时，如果缓存内条目数已经大于目标条数，自动触发flush。
+- 在初始化的时候，创建一个日志队列线程并开始
+    - 开启while循环，从日志队列取数据，如果有数据则doFlush()发送到LogService，通过Aidl进行数据发送。
+
+
+
+#### 2.6 如何写数据的设计
+- 如何写数据的设计
+    - 创建Writer对象，调用writer.write(string)进行写入数据。
+- flush写数据时机，粗略分为四种情况：
+    - 缓存池满、应用从前台进入后台、应用从后台恢复至前台、手动代码调用。手动代码调用一般发生在进入超高频触发区之前，或者是跨功能模块时，以及用户交互需求日志上传时。
+
+
+
 ### 02.日志存储设计思路
 #### 2.1 使用跨进程写日志
-- 使用Intent
-    - Activity，Service，Receiver 都支持在 Intent 中传递 Bundle 数据，而 Bundle 实现了 Parcelable 接口，可以在不同的进程间进行传输。
-- 使用文件共享
-    - 可以在一个进程中序列化一个对象到文件系统中，在另一个进程中反序列化恢复这个对象（**注意**：并不是同一个对象，只是内容相同。）
-- 使用Messenger
-    - Messenger 是一种轻量级的 IPC 方案，它的底层实现是 AIDL ，可以在不同进程中传递 Message 对象，它一次只处理一个请求，在服务端不需要考虑线程同步的问题，服务端不存在并发执行的情形。
-- 使用AIDL
-    - 服务端，创建Service用于监听客户端的连接请求，然后创建一个AIDL接口文件，里面是将要实现的方法，注意这个方法是暴露给客户端的的，**在Service中实现这个AIDL接口即可**。
-    - 客户端，先绑定服务端Service，绑定成功后，将服务端返回的Binder对象转换成AIDL接口所属的类型，最后调用AIDL的方法就可以了。
-- 使用ContentProvider
-    - 许多如通讯录、公共相册、日程表，需要跨进程访问。使用方法：继承 ContentProvider 类实现抽象方法，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
 
 
 #### 2.2 选择Service通信
