--- a/Read/ReadMeWiki/01.大型方案/28.音视频通话方案设计.md
+++ b/Read/ReadMeWiki/01.大型方案/28.音视频通话方案设计.md
@@ -24,15 +24,17 @@
 
 ### 01.整体概述说明
 #### 1.1 项目背景介绍
-- 文具盒作为新品包含音视频通话功能，需要APP测进行视频聊天业务的开发。
-- 智能笔作为学生AI学习工具，可以支持与App之间进行语音通话。
-- 手表作为学生佩戴工具，可以支持设备与App之间进行语音通话。
+- 智能设备和App之间的业务场景
+    - 文具盒作为新品包含音视频通话功能，需要APP测进行视频聊天业务的开发。
+    - 智能笔作为学生AI学习工具，可以支持与App之间进行语音通话。
+    - 手表作为学生佩戴工具，可以支持设备与App之间进行语音通话。
 
 
 
 #### 1.2 UI设计视图
-- ![image](https://img-blog.csdnimg.cn/b4bddf03442a4c438f1cac96d3a2ccc2.png)
-- ![image](https://img-blog.csdnimg.cn/c64f5d84314d48b39bb5746939dfcc89.png)
+- UI设计视图如下
+    - ![image](https://img-blog.csdnimg.cn/b4bddf03442a4c438f1cac96d3a2ccc2.png)
+    - ![image](https://img-blog.csdnimg.cn/c64f5d84314d48b39bb5746939dfcc89.png)
 
 
 #### 1.3 设计目标
