--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -60,6 +60,7 @@
 
 
 
+
 ### 03.作业帮项目问题汇总
 - 音视频通话：
 - 音视频通话：
@@ -74,7 +75,7 @@
 - 缓存脏数据：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
 - 缓存设计：由于磁盘 IO 操作是耗时操作，因此框架有必要将支持多次磁盘 IO 操作聚合为一次磁盘写回事务，减少访问磁盘次数是如何设计？
 - App抓包：设计数据加密手段，sign签名，环境检测，CA证书校验，禁用代理，还有各种防抓包策略如何操作？
-- 日志写入：如何设计日志写入框架？
+- 日志写入：如何设计日志写入框架？存储日志信息如何设计？日志保存策略如何设计？如何避免写日志影响主进程性能？
 - 日志回捞：日志上传的业务逻辑是什么样的？有什么收益？日志上传总体设计方案是什么样的？
 
 
