--- a/Read/ReadFlutterWiki/01.Dart基础/06.单线程模型的解读.md
+++ b/Read/ReadFlutterWiki/01.Dart基础/06.单线程模型的解读.md
@@ -49,6 +49,10 @@
 
 
 ### 05.Future异步任务
+- Future，字面意思「未来」，是用来处理异步的工具。
+    - Future 默认情况下其实就是往「事件队列」里插入一个事件，当有空余时间的时候就去执行，当执行完毕后会回调 Future.then(v) 方法。
+    - 也可以通过使用 Future.microTask 方法来向 「微任务队列」中插入一个任务，这样就会提高他执行的效率。
+    - 因为在 Dart 每一个 isolate 当中，执行优先级为 ： Main > MicroTask > EventQueue
 - 一个 Future 异步任务的执行是相对简单的
     - 在我们声明一个 Future 时，Dart 会将异步任务的函数执行体放入事件队列，然后立即返回，后续的代码继续同步执行。
     - 而当同步执行的代码执行完毕后，事件队列会按照加入事件队列的顺序（即声明顺序），依次取出事件，最后同步执行 Future 的函数体及后续的 then。
