--- a/Read/ReadFlutterWiki/04.混合开发/03.Flutter容器开发实践.md
+++ b/Read/ReadFlutterWiki/04.混合开发/03.Flutter容器开发实践.md
@@ -109,7 +109,8 @@
     - 需要注意，这里的FlutterView位于io.flutter.embedding.android包中，和此前我们所创建的FlutterView（位于io.flutter.view包中）是不一样的。
 - NA添加FlutterView
     - 在NA创建一个Activity，在onCreate中创建FlutterView然后添加到布局中。
-    - 调用FlutterView的attachToFlutterEngine()方法，这个方法的作用就是将Flutter编写的UI页面显示到FlutterView中，注意到这里传入了一个flutterEngine参数，它又是什么呢？flutterEngine的类型为FlutterEngine，字面意思就是Flutter引擎，它负责在Android端执行Dart代码，将Flutter编写的UI显示到FlutterView的容器中。
+    - 调用FlutterView的attachToFlutterEngine()方法，这个方法的作用就是将Flutter编写的UI页面显示到FlutterView中，注意到这里传入了一个flutterEngine参数，它又是什么呢？
+    - flutterEngine的类型为FlutterEngine，字面意思就是Flutter引擎，它负责在Android端执行Dart代码，将Flutter编写的UI显示到FlutterView的容器中。
     ```
     private void addFlutterView() {
         flutterEngine = new FlutterEngine(this);
