--- a/Read/ReadMeWiki/09.问题分析/09.Flutter问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/09.Flutter问题汇总.md
@@ -1,4 +1,48 @@
 ### 目录介绍
+- 01.Flutter跨端问题
+- 02.Dart基础语法问题
+- 03.Widget原理分析
+- 04.UI渲染和绘制问题
+- 05.其他一些技术问题
+
+
+
+
+
+### 01.Flutter跨端问题
+- Flutter跨平台：Flutter跨端优势有哪些？研发效率、动态性、多端一致性、性能体验，分别说一下？
+- Channel通信：Flutter 如何与 Android iOS 通信？每一种通信方式有什么特点？channel传递数据是否会丢失？
+- Flutter容器：Android/iOS承载flutter容器有哪些情况？NA添加FlutterView做了那些操作？Android引入flutter本质是什么？
+- FlutterEngine：混合开发多容器场景中，Flutter如何做到引擎的复用？
+- Flutter容器：FlutterView如何跟原生保持生命周期同步？如何理解LifecycleChannel的作用？
+- 栈管理：Flutter栈是如何管理设计的？
+
+
+
+### 02.Dart基础语法问题
+- 基础语法：Dart中var与dynamic的区别？const和final的区别？Dart中??与??=的区别？
+- 线程模型：如何理解单线程模型？它是怎么执行异步操作？如何理解微任务队列和事件队列，为什么要这样设计？绘制一下流程图。
+- 异步任务：await 和 async是如何理解？如何理解 Future？Stream 和 Future 有什么区别？能否用 Stream 实现订阅者模式？
+
+
+
+### 03.Widget原理分析
+- Flutter工作原理：Flutter是如何工作？布局、绘制、合成和渲染分别做了什么？如何避免字节点变化导致父布局刷新？
+- StatefulWidget：简单说一下生命周期？如果是在混合App中，前后台监听需要注意什么？
+- main入口：main()和runApp()函数在flutter的作用分别是什么？有什么关系吗？
+- Widget基础：什么是Widget? 在flutter里有几种类型的widget？分别有什么区别？介绍下Widget、State、Context 概念？
+- 三棵树：简述Widgets、RenderObjects 和 Elements的关系？
+- 状态管理：Flutter状态管理如何理解？
+
+
+
+### 04.UI渲染和绘制问题
+
+
+
+### 05.其他一些技术问题
+- Hot作用：Hot Restart 和 Hot Reload 有什么区别吗？如何理解热重启和热重载？
+
 
 
 ### 08.Flutter面试题
@@ -49,7 +93,7 @@
     - Flutter 引擎帧调度，怎么加入到 EventLoop
 
 
-
+- https://www.jianshu.com/p/9064a68a05ae
 
 
 
