--- a/Read/ReadFlutterWiki/04.混合开发/02.混合开发实践设计.md
+++ b/Read/ReadFlutterWiki/04.混合开发/02.混合开发实践设计.md
@@ -22,7 +22,6 @@
     - 8.native容器承载flutter页面渲染，该怎么方便引用？
     - 9.原生和flutter之间大量channel交互如何优化，能否搭建一套中间接口通信组件？
     - 10.项目多套flavor包，如何在flutter切换flavor环境呢？
-    - 11.
 - 逐一去弄明白问题
     - 1.为什么项目要使用flutter混合开发，目标是什么？
 
@@ -130,3 +129,61 @@
     - 所以如果项目中使用了AndroidX，则要慎重导入flutter模块。
 - 如何解决该兼容
     - 如果一定要导入，则可以去阅读flutter官方提供的解决方案——[AndroidX compatibility](https://flutter.dev/docs/development/androidx-migration)。
+
+
+
+### 01.整体概述
+#### 1.1 项目背景
+- 业务侧方向
+    - 
+- 技术侧方向：
+    - 维护成本：App业务架构已经支撑了多年，随着业务逻辑的不断叠加，维护成本也越来越高。
+    - 效率：虽然两端都进行了单端效率提升的探索比如swift、kotlin，但单端效率提升有限；随着Flutter技术的探索以及C端订单详情页面的Flutter落地，让我们看到了在效率上可以有更大的提升
+    - 双端一致性：由于双端差异及历史原因，导致双端存在很多差异性。
+- 顺应技术潮流：
+    - flutter推出多年，取得收益很多
+
+
+#### 1.4 设计目标
+- 业务侧：
+    - 可拓展性：可更好承接不同业务模式下的产品设计诉求，满足高效、容错、稳定、灵活的效果
+    - 高效：
+    - 灵活：
+- 技术侧：
+    - 完成主流程重构，提高主流程模块的可维护性及稳定性
+    - 完成主流程模块的Flutter落地，提升人效和双端一致性
+
+
+
+
+### 04.遇到问题
+#### 4.3 Widget臃肿
+- 背景说明
+    - 在写flutter页面的时候，遇到比较复杂的页面，会使用很多不同视图View控件，然后还需要请求多个接口，然后刷新页面。
+    - 这个时候写着写着就会导致代码越来越臃肿，因此使用合理的架构精简代码，让代码设计更清晰，很重要。
+- flutter代码架构设计
+    - 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+- Flutter卡顿问题的监控与思考
+    - https://mp.weixin.qq.com/s/-BTEkHYeh_tHqJY2UNI_xw
+
+
+
+
+
+
+
