--- a/Read/ReadMeWiki/01.大型方案/02.Apt实现组件接口通信.md
+++ b/Read/ReadMeWiki/01.大型方案/02.Apt实现组件接口通信.md
@@ -8,8 +8,10 @@
 - 02.老版本组件通信
     - 2.1 项目组件通信
     - 2.2 老版组件通信实践
-- 03.一些技术要点分析
-    - 3.1 
+    - 2.3 存在的问题分析
+    - 2.4 解决痛点方案
+- 03.设计思路的分析
+    - 3.1 Apt设计思路
     - 3.3 静态和动态代理
     - 3.6 apt如何生成代码
     - 3.7 反射一点思考
@@ -43,7 +45,11 @@
 
 
 #### 1.3 基础概念介绍
-- 组件之间的通信，接口+实现类，使用注解生成代码方式，无需手动注册，将使用步骤简单化，支持组件间以暴露接口提供服务的方式进行通信。
+- Apt技术介绍
+    - APT，就是Annotation Processing Tool的简称，就是可以在代码编译期间对注解进行处理，并且生成Java文件，减少手动的代码输入。
+    - 也有人叫它代码生成，其实还是有些区别，在编译时对注解做处理，通过注解，获取必要信息，在项目中生成代码，运行时调用，和直接运行手写代码没有任何区别。
+- 组件之间的通信
+    - 接口+实现类，使用注解生成代码方式，无需手动注册，将使用步骤简单化，支持组件间以暴露接口提供服务的方式进行通信。
 
 
 #### 1.4 设计目标
@@ -53,7 +59,7 @@
     - 无服务实现注册时，使用空对象模式 + 动态代理的设计提前暴露调用错误，主要抛出异常，在测试时就发现问题，防止空指针异常。
 - 代码入侵性低
     - 无需改动之前的代码，只需要在之前的接口和接口实现类按照约定添加注解规范即可。其接口+接口实现类还是用之前的，完全无影响……
-- 按照你需要来加载
+- 按照需要来加载
     - 首次获取接口服务的时候，用反射生成映射注册帮助类的实例，再返回实现的实例。
 - 丰富的代码案例
     - 代码案例丰富，提供丰富的案例，然后多个业务场景，尽可能完善好demo。
@@ -61,7 +67,10 @@
     - 在编译器生成代码，并且该类是继承自己自定义的接口，存储的是map集合，key是接口class，value是接口实现类class，直接在编译器把接口和实现类存储起来。用的时候直接取……
 
 
+
 #### 1.5 产生收益分析
+
+
 
 
 ### 02.老版本组件通信
@@ -134,6 +143,9 @@
         }
     });
     ```
+
+
+#### 2.3 存在的问题分析
 - 这种方式存在几个问题
     - 1.注入的时候要填写正确的包名，否则在运行期会出错，且不容易找到；
     - 2.针对接口实现类，不能混淆，否则会导致反射找不到具体的类，因为是根据类的全路径反射创建对象；所以每次写一个接口+实现类，都要在混淆文件中添加一下，比较麻烦……
@@ -142,8 +154,16 @@
     - 5.可能出现空指针，一旦忘记没有注入或者反射创建对象失败，则直接导致崩溃……
 
 
+#### 2.4 解决痛点方案
 
-### 03.一些技术要点分析
+
+
+
+### 03.设计思路的分析
+#### 3.1 Apt设计思路
+
+
+
 #### 3.3 静态和动态代理
 - 快速理解静态代理
     - 静态代理的实现模式 = 接口(抽象类) + 具体实现类(委托类) + 代理类。比如轻量级线程库中，AbsTaskExecutor(抽象类) + DefaultTaskExecutor(具体实现类) + DelegateTaskExecutor(代理类)
@@ -156,10 +176,12 @@
 
 
 
-#### 3.6 apt如何生成代码
+#### 3.6 Apt如何生成代码
 - 注解是如何生成代码的？也就是javapoet原理……
     - 这个javapoet工具，目前还紧紧是套用ARouter，创建类名，添加接口，添加注解，添加方法，添加修饰符，添加函数体等等。也就是说将一个类代码拆分成n个部分，然后逆向拼接到一起。最后去write写入代码……
     - 但是，怎么拼接和并且创建.java文件的原理，待完善。目前处于会用……
+
+
 
 
 #### 3.7 反射一点思考
