--- a/Read/ReadShareWiki/01.综合专项/12.STAR法则模板.md
+++ b/Read/ReadShareWiki/01.综合专项/12.STAR法则模板.md
@@ -10,7 +10,8 @@
 
 
 #### STAR法则
-"STAR法则是情境（指事情发生的情景）、任务（承担的任务）、行动（采取的行动）、结果（最终的结果）四项的英文单词首字母缩写。STAR法则是一种常常被面试官使用的工具，用来收集面试者与工作相关的具体信息和能力。"
+"STAR法则是情境（指事情发生的情景）、任务（承担的任务）、行动（采取的行动）、结果（最终的结果）四项的英文单词首字母缩写。
+STAR法则是一种常常被面试官使用的工具，用来收集面试者与工作相关的具体信息和能力。"
 
 
 ### 情境（Situation） 
