--- a/Read/ReadFlutterWiki/01.Dart基础/01.Dart基础类型介绍.md
+++ b/Read/ReadFlutterWiki/01.Dart基础/01.Dart基础类型介绍.md
@@ -100,7 +100,7 @@
     - 也就是说所有类型都是`Object`的子类(包括Function和Null)，所以任何类型的数据都可以赋值给`Object`声明的对象.
 - `dynamic`与`var`一样都是关键词
     - 声明的变量可以赋值任意对象。而`dynamic`与`Object`相同之处在于,他们声明的变量可以在后期改变赋值类型.
-    ```dart
+    ``` dart
     dynamic t;
     Object x;
     t = "hi world";
@@ -111,7 +111,7 @@
     ```
 - `dynamic`与`Object`不同的是什么
     - `dynamic`声明的对象编译器会提供所有可能的组合，而`Object`声明的对象只能使用Object的属性与方法, 否则编译器会报错. 如:
-   ```dart
+   ``` dart
     dynamic a;
     Object b;
     main() {
@@ -130,7 +130,7 @@
    ```
    - 变量a不会报错, 变量b编译器会报错
         - `dynamic`的这个特性与`Objective-C`中的`id`作用很像.
-        - `dynamic`的这个特点使得我们在使用它是需要格外注意,这很容易引入一个运行时错误.
+        - `dynamic`的这个特点使得我们在使用它是需要格外注意，这很容易引入一个运行时错误.
 
 
 
