--- a/Read/ReadMeWiki/09.问题分析/09.Flutter问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/09.Flutter问题汇总.md
@@ -15,7 +15,8 @@
 - Flutter容器：Android/iOS承载flutter容器有哪些情况？NA添加FlutterView做了那些操作？Android引入flutter本质是什么？
 - FlutterEngine：混合开发多容器场景中，Flutter如何做到引擎的复用？
 - Flutter容器：FlutterView如何跟原生保持生命周期同步？如何理解LifecycleChannel的作用？
-- 栈管理：Flutter栈是如何管理设计的？
+- 栈管理：Flutter栈是如何管理设计的？如何是混合开发，如何处理A(原生)->B(flutter)->C(原生)->D(flutter)路由跳转？
+- Flutter引擎：单引擎&多引擎模式模式如何理解？多引擎模式存在的问题？单引擎的的方案如何设计？
 
 
 
