--- a/Read/ReadMeWiki/00.方案实践/09.网络监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/09.网络监控设计实践.md
@@ -91,6 +91,17 @@
 
 ### 04.封装思路介绍
 #### 4.1 弱网模拟实践
+- 如何开发模拟网络异常工具
+    - 整体设计思路是，给OkHttpClient添加拦截器，然后在拦截器中拿到request和respond数据做处理即可。
+- 如何模拟网络超时
+    - 网络超时分为两种：请求超时和响应超时。请求超时是指客户端发送request到服务端过程超时，响应超时是指客户端在接收服务端respond数据过程超时。
+    - 模拟请求超时需要在chain.request()代码前面sleep时间，模拟响应超时需要在chain.proceed(request)代码之后sleep时间即可。
+- 如何模拟重定向或服务端异常
+    - 通过拦截器拿到Chain对象，先发送request，请求成功后会拿到真是respond数据。那么这个时候可以针对这个respond处理，重新设置数据和code码信息
+- 如何模拟弱网环境
+    - 模拟弱网环境相对复杂一点，发送request和接收respond数据都会有io流读写操作。其核心思路就是对io读写速度做出限制，比如每秒读取1k数据，那么读取10k的接口数据需要10秒
+    - 如何对RequestBody数据限制？请求数据write的时候，第一限制字节流传输(每次写设置byteCount字节长度)，第二在一秒内如果超出限制就sleep一下
+    - 如何对ResponseBody数据限制？
 
 
 #### 4.2 抓包拦截实践
