--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -32,7 +32,9 @@
 ### 03.网络相关问题汇总
 - 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？
 - Https请求慢的解决办法（提示：DNS，携带数据，直接访问IP）
-- 现在下载速度很慢,试从网络协议的角度分析原因,并优化(提示：网络的5层都可以涉及)。
+- 弱网模拟：如何模拟弱网操作，其设计思路是什么？如何模拟重定向或服务端异常？
+- 耗时统计：对网络请求如何做耗时统计？其设计思路是什么？假设有10个请求，如何保证接口耗时数据是与请求接口对应对？
+- 案例分析：现在下载速度很慢，试从网络协议的角度分析原因，并优化(提示：网络的5层都可以涉及)。
 
 
 
