--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -45,9 +45,11 @@
     - 7.5 启动效果分析
 
 
+
 ### 01.启动优化背景
 #### 1.1 项目背景介绍
-- 用户希望应用能够及时响应并快速加载。启动时间过长的应用不能满足这个期望。提高程序的启动速度意义重大，很显然，启动时间越短，会让用户感觉使用越流畅！
+- 用户希望应用能够及时响应并快速加载。
+    - 启动时间过长的应用不能满足这个期望。提高程序的启动速度意义重大，很显然，启动时间越短，会让用户感觉使用越流畅！
 
 
 #### 1.2 概念说明
