--- a/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
@@ -7,7 +7,6 @@
 - 05.树相关问题
 - 06.排序相关问题
 - 07.查找相关问题
-- 08.
 - 09.散列相关问题
 - 10.字符串相关问题
 - 11.递归相关问题
@@ -52,6 +51,11 @@
 
 
 ### 15.常用数据结构
+- HashMap：
+
+
+
+
 - 什么是Java集合的快速失败机制 “fail-fast”？这种情况会在什么场景下发生，具体分析一下？
 - ArrayList 和 Vector 的区别？ArrayList 和 Vector 的存储空间是如何扩容的？什么是加载因子？
 - ArrayList和LinkedList的区别？为什么说LinkedList 在插入和删除数据时效率更高？有没有在优化的可能？
