--- a/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
@@ -28,6 +28,7 @@
     - 7.1 工程架构对Crash率的影响
     - 7.2 大图监控
     - 7.3 Lint检查
+    - 7.4 最后的抢救
 - 08.Looper拦截崩溃
     - 8.1 能否用Looper拦截崩溃
     - 8.2 使用Loop拦截崩溃
@@ -378,6 +379,10 @@
     - 如检查实现了`Serializable`接口的类，其成员变量（包括从父类继承的）所声明的类型都要实现Serializable接口，可以有效的避免`NotSerializableException`；强制使用封装好的工具类如ColorUtil、WindowUtil等可以有效的避免因为参数不正确产生的IllegalArgumentException和因为`Activity`已经`finish`导致的`BadTokenException`。
 - Lint检查可以在多个阶段执行，包括在本地手动检查、编码实时检查、编译时检查、commit时检查，以及在CI系统中提Pull Request时检查、打包时检查等。
 
+
+#### 7.4 最后的抢救
+- Android Crash 最后的抢救
+    - https://mp.weixin.qq.com/s/91CsBU57BubJtRUdfmkPgw
 
 
 
