--- a/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.App启动优化实践.md
@@ -17,6 +17,7 @@
     - 3.1 优化如何着手
     - 3.2 业务梳理优化思路
     - 3.3 任务调度优化
+    - 3.4 修改消息队列
 - 04.启动优化实践操作
     - 4.1 启动阶段代码梳理
     - 4.2 收集耗时信息
@@ -210,6 +211,10 @@
 - 把主线程的串行任务变成并发任务
     - 提起并发，在Android最常用的基本就是AsyncTask和线程池，把所有任务都放在子线程里去调度是否真的会减少冷启动时间，减少的时间比起我们改造的成本来说，收益大不大，是不是最优解，都是我们需要着重考虑的问题，所以，如何选择合适的线程池是最先需要解决的问题。
 
+
+
+#### 3.4 修改消息队列
+- https://mp.weixin.qq.com/s/Jaszg1Tjqj6DvMJYZoy96g
 
 
 
