--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -22,7 +22,7 @@
     - 3.3 图片质量压缩
     - 3.4 双线性采样压缩
     - 3.5 高清图分片加载
-    - 3.6 图片综合压缩
+    - 3.6 鲁班图片综合压缩
 - 04.色彩格式及内存优化
     - 4.1 RGB颜色种类
     - 4.2 ARGB色彩模式
@@ -309,7 +309,7 @@
 - 基本使用流程 : 先创建，后解码 。调用 newInstance 方法 , 创建 BitmapRegionDecoder 对象 ；然后调用 decodeRegion 方法 , 获取指定 Rect 矩形区域的解码后的 Bitmap 对象
 
 
-#### 3.6 图片综合压缩
+#### 3.6 鲁班图片综合压缩
 - 一般情况下图片综合压缩的整体思路如下：
     - 第一步进行采样率压缩；
     - 第二步进行宽高的等比例压缩（微信对原图和缩略图限制了最大长宽或者最小长宽）；
