--- a/Read/ReadMeWiki/07.库的设计/02.Glide图片加载设计.md
+++ b/Read/ReadMeWiki/07.库的设计/02.Glide图片加载设计.md
@@ -25,8 +25,10 @@
     - 3.8 图片显示实践
 - 04.一些技术点思考
     - 4.1 为何监听生命周期
+    - 4.4 对象池的优化思考
     - 4.5 缓存方案思考
     - 4.6 加载进度思考
+    - 4.9 Glide一些常见优化
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -89,6 +91,15 @@
 
 
 #### 2.7 图片解码和压缩设计
+- 先说一个场景
+    - 加载图片到ImageView上。合理点的做法是「根据目标ImageView的尺寸，让解码器对原始图像进行下采样，以提供一个较低分辨率版本的缩略图」。
+    - 大概的思路：使用降采样使得图像符合显示区域的大小，生成对应图像的缩略图，并且进行解码，质量压缩等一系列操作压缩图片。
+- Android的普通方案
+    - 采样率压缩+质量压缩：计算采样率从而减小图片的宽高，这里面加载需要注意inJustDecodeBounds参数设置。
+- Glide的极致方案
+    - 同样会根据目标控件的尺寸，对图片进行适当的下采样、裁剪和变换，以减少内存占用，并确保加载过程尽快完成。
+    
+    
 
 
 #### 2.8 图片显示设计
@@ -116,6 +127,37 @@
     - 当一个界面离开之后，我们更希望当前的图片取消加载，那么 Glide 是怎么做到的呢？
     - Glide 的使用方式上，一定需要传入一个 context 给它。它为什么需要拿上下文呢？原因就是可以根据不同的上下文进行处理，拿到 context （除了application context）之后，Glide做了一件很巧妙的事情，就是在这个界面上追加一个 fragment，由于 fragment 添加到了 activity 上，是可以捕获到生命周期的，因此可以在 destroy 的时候取消掉当前context下的 glide对象中的加载任务。
     - 为什么标题后面说是 ‘也是bug高发地带’ 呢？ 因为从实现方式上，它是巧妙的利用了fragment的生命周期来实现的‘销毁’动作，那么就类似于另外一个高发bug,延时的匿名内部类(网络请求callback回来)，界面已经销毁，所以当前activity依附的glide也就销毁了的，此时再尝试加载图片的话，就会crash。
+
+
+
+
+#### 4.4 对象池的优化思考
+- 说一下业务背景：Glide频繁请求图片
+    - 比如Glide中，每个图片请求任务，都需要用到类。若每次都需要重新new这些类，并不是很合适。而且在大量图片请求时，频繁创建和销毁这些类，可能会导致内存抖动，影响性能。
+- 使用缓存池优化对象频繁创建
+    - Glide使用对象池的机制，对这种频繁需要创建和销毁的对象保存在一个对象池中。每次用到该对象时，就取对象池空闲的对象，并对它进行初始化操作，从而提高框架的性能。
+- 多条件key缓存bitmap场景优化
+    - 第一步：我们需要定义一个Key对象来包含各种缓存的条件，例如我们除了图片名字作为条件，还有图片的宽度，高度也决定了是否是同一个资源。
+    - 第二步：支持多条件的缓存键值，但是每次查找缓存前都需要创建一个新的 Key 对象，虽然这个 Key 对象很轻量，但是终归觉得不优雅。glide源码中会提供一个 BitmapPool 来获取 Bitmap 以避免 Bitmap 的频繁申请。
+    - 第三步：在Map集合(key,bitmap)查找Key时，如果没有发现命中的值，那么就会创建新的值，并将其连同 Key 保存在 HashMap 中，不会对 Key 进行复用。而如果发现了命中的值，也就是说 HashMap 中已经有一个和当前 Key 相同的 Key 对象了，那么 Key 就可以通过 offer 方法回收到了 KeyPool 中，以待下一次查找时复用。
+- 为何要多条件key
+    - 针对bitmap，加载图片特别频繁且多，不建议只是简单通过一个name图片名称作为键，因为可能图片名称是一样的，比如有时候接口返回同样名称的图片有大图，正常图，缩略图等，那样可能会存储重复或者碰撞。但是通过name，还有图片宽高字段，就可以大大减小这种问题呢。
+
+
+
+
+#### 4.9 Glide一些常见优化
+
+
+
+
+
+
+#### 参考博客
+- Glide你为何如此秀？
+    - https://mp.weixin.qq.com/s/pAazRD9NaLPvBseG51ZOLw
+
+
 
 
 
